P4ADEV-2052 resolve issues